# l0

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  examples.json  test_get_api.sh  test_post_api.sh
migrations/: 20240911032200_create_orders_and_items_tables.down.sql  20240911032200_create_orders_and_items_tables.up.sql
scripts/: test_delete_api.sh  test_list_api.sh  test_post_api.sh
src/: lib.rs  main.rs  model.rs
src/app/: error.rs  handlers.rs  mod.rs  model.rs
src/repository/: mod.rs  model.rs
