[package]
edition = "2021"
name    = "l0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow         = "1.0.86"
axum           = { version = "0.7.5", features = ["macros"] }
dotenvy        = "0.15.7"
futures        = "0.3.30"
http           = "1.1.0"
log            = "0.4.22"
serde          = { version = "1.0.209", features = ["serde_derive"] }
serde_json     = "1.0.128"
tokio          = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
